--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -1,3 +1,7 @@
+<head>  
+  <%= javascript_include_tag :all %>  
+  <b><%= stylesheet_link_tag 'layout' %></b>  
+</head>  
 <body>  
   <div id="content">  
     <p><%= render :partial => "users/login" %></p>  
